docs: ✏️ 추가 illegal reflective 경고문과 pickNumberInRange 관련 트러블 슈팅
버전 관련 illegal reflective 경고문에 대해 작성(해결방법에 대해 더 자세히 검색해보자). 또한 프로그래밍
요구사항을 자세히 읽지 않아 벌어진 해프닝을 솔직하게 작성하였다.